created game logic

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -21,12 +21,7 @@
 			<a name="Memory Game"></a>
 			<h2 class="titles">Why Memory Game?</h2>
 			<p>Maybe as a measure of your mental acumen?  Perhaps as a feat of cerebal gymnastics?  Or maybe simply because you can't stomach another game of Solitaire or Mahjong.  Same.</p>
-			<div>
-				<img src="images/back.png" alt="Queen of Diamonds">
-				<img src="images/back.png" alt="Queenof Hearts">
-				<img src="images/back.png" alt="King of Diamonds">
-				<img src="images/back.png" alt="King of Hearts">
-			</div>
+			<div id="game-board" class="board clearfix"></div>
 		</main>
 		<footer class="clearfix">
 			<p class="copyright">Copyright 2017</p>
